--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '21'
     }
 
     buildFeatures {
@@ -56,11 +56,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.activity:activity-compose:1.8.2'
-    implementation 'androidx.compose.ui:ui:1.5.4'
-    implementation 'androidx.compose.ui:ui-graphics:1.5.4'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.4'
+    implementation 'androidx.compose.ui:ui:1.6.0'
+    implementation 'androidx.compose.ui:ui-graphics:1.6.0'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.0'
     implementation 'androidx.compose.material3:material3:1.1.2'
-    implementation 'androidx.compose.material:material-icons-extended:1.5.4'
+    implementation 'androidx.compose.material:material-icons-extended:1.6.0'
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
 
     // Hilt
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
     implementation 'com.google.dagger:hilt-android:2.48'
     kapt 'com.google.dagger:hilt-compiler:2.48'
 
@@ -107,7 +108,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2024.02.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
